Fixed header spacing

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 header {
     text-align: center;
-    padding: 25px 20px;
+    padding: 15px 15px;
     background: linear-gradient(135deg,#4077be,#ffffff);
     color: #fff;
     box-shadow: 0 5px 15px rgba(0,0,0,0.2);
